# ia1

./: Cargo.toml  LICENSE  README.md  map_example
benchmarks/: Cargo.toml
benchmarks/src/: main.rs
car_simulation/: Cargo.toml
car_simulation/src/: main.rs
car_simulation/src/frontend/: mod.rs  run_simulation.rs  screen.rs
grid/: Cargo.toml
grid/src/: content.rs  lib.rs  path_finding.rs
src/: event_loop.rs  events.rs  grid.rs  main.rs  screen.rs
src/frontend/: events.rs  mod.rs  run_simulation.rs  screen.rs
src/grid/: content.rs  error.rs  mod.rs  path_finding.rs
