[package]
name = "car_simulation"
version = "0.1.0"
authors = ["Daniel-del-Castillo <alu0101225548@alu.edu.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid = { path = "../grid"}
crossterm = "0.18.0"
clap = "2.33.3"
rand = "0.7.3"